--- a/git-tag-action/action.yaml
+++ b/git-tag-action/action.yaml
@@ -13,7 +13,13 @@ runs:
       shell: bash
     - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       shell: bash
+    
+    - name: print output
+      run: |
+          echo "hi"
+          pwd
+          ls -la
       
-    - run: bash ./.github/workflows/actions/git-tag-action/git-tagging.sh
+    - run: bash ./git-tag-action/git-tagging.sh
       shell: bash
       
