--- a/git-tag-action/action.yaml
+++ b/git-tag-action/action.yaml
@@ -33,7 +33,8 @@ runs:
           echo "input build tag ${build_tag}"
           message=${{ inputs.MESSAGE }}
           header=${{ inputs.HEADER }}
-          echo "${message} ${header}"
+          echo "${message}"
+          echo "${header}"
           #ls -la
          # ls -la .github/workflows
           #ls -la .github/workflows/actions
